--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,28 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.hamburger-container {
+  display: none;
+}
+
+
+@media (max-width: 768px) {
+  .hamburger-container {
+    display: block;
+    position: absolute;
+    top: 1rem;   
+    right: 1rem; 
+    z-index: 10; 
+  }
+}
+
+.navbar-container{
+  display:none;
+}
+
+@media (min-width: 768px){
+  .navbar-container{
+    display:block
+  }
+}
