--- a/app/globals.css
+++ b/app/globals.css
@@ -88,6 +88,19 @@ body {
   }
 }
 
+.carouselAnim{
+  animation: carouselAnimation 0.5s ease-in-out forwards;
+}
+
+@keyframes carouselAnimation {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
 .marquee-container {
   width: 100%;
   position: relative; 
