--- a/app/globals.css
+++ b/app/globals.css
@@ -3,220 +3,213 @@
 @tailwind utilities;
 
 /* styles/globals.css */
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;700&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Narrow:wght@400;700&display=swap");
 
 ::-webkit-scrollbar {
-  width: 0px;  /* WebkKit hide scrollbar */
+    width: 0px; /* WebkKit hide scrollbar */
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0; /* Ensure there's no body margin */
-  -ms-overflow-style: none;  /* IE and Edge hide scrollbar */
-  scrollbar-width: none;  /* Firefox hide scrollbar */
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0; /* Ensure there's no body margin */
+    -ms-overflow-style: none; /* IE and Edge hide scrollbar */
+    scrollbar-width: none; /* Firefox hide scrollbar */
 }
 
 .hamburger-container {
-  display: none;
+    display: none;
 }
 
 .navbar-container {
-  display: none;
+    display: none;
 }
 
-
 @media (max-width: 768px) {
-  .hamburger-container {
-    display: block;
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-    z-index: 10;
-  }
+    .hamburger-container {
+        display: block;
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        z-index: 10;
+    }
 
-  /* Logo Position Adjustments for Smaller Screens */
-  .homepage-logo {
-    top: 30%; /* Adjust Hackhub logo position for smaller screens */
-  }
+    /* Logo Position Adjustments for Smaller Screens */
+    .homepage-logo {
+        top: 30%; /* Adjust Hackhub logo position for smaller screens */
+    }
 
-  .homepage-2025-logo {
-    top: 50%; /* Adjust 2025 logo position for smaller screens */
-  }
+    .homepage-2025-logo {
+        top: 50%; /* Adjust 2025 logo position for smaller screens */
+    }
 }
 
 @media (max-width: 480px) {
-  .homepage-logo {
-    top: 25%; /* Further adjust Hackhub logo position for very small screens */
-    width: 70vw; /* Adjust width for smaller screens */
-  }
+    .homepage-logo {
+        top: 25%; /* Further adjust Hackhub logo position for very small screens */
+        width: 70vw; /* Adjust width for smaller screens */
+    }
 
-  .homepage-2025-logo {
-    top: 45%; /* Further adjust 2025 logo position for very small screens */
-    width: 20vw; /* Adjust width for smaller screens */
-  }
+    .homepage-2025-logo {
+        top: 45%; /* Further adjust 2025 logo position for very small screens */
+        width: 20vw; /* Adjust width for smaller screens */
+    }
 }
 
 @media (min-width: 768px) {
-  .navbar-container {
-    display: block;
-  }
+    .navbar-container {
+        display: block;
+    }
 }
 
 /* Custom CSS for screens larger than 1536px */
 @media (min-width: 1536px) {
-  .about-text-adjustment {
-    bottom: 70% !important;
-  }
+    .about-text-adjustment {
+        bottom: 70% !important;
+    }
 }
 
-@media(max-width: 640px){
-  .about-text-adjustment {
-    bottom: 80% ;
-  }
+@media (max-width: 640px) {
+    .about-text-adjustment {
+        bottom: 80%;
+    }
 }
-
-
 
 @keyframes marquee-animation {
-  0% {
-    transform: translateX(100%); 
-  }
-  100% {
-    transform: translateX(-100%); 
-  }
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
 }
 
-.carouselAnim{
-  animation: carouselAnimationLeft 0.5s ease-in-out forwards;
+.carouselAnim {
+    animation: carouselAnimationLeft 2s ease-in-out forwards;
 }
-
 
 @keyframes carouselAnimationLeft {
-  0%{
-    opacity: 0;
-    transform: translateX(20px);
-  }
-  70%{
-    opacity: 1;
-    transform: translateX(-10px);
-  }
-  100%{
-    opacity: 1;
-    transform: translateX(0px);
-  }
+    0% {
+        opacity: 0;
+        transform: translateX(20px);
+    }
+    70% {
+        opacity: 1;
+        transform: translateX(-10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
 }
 
-
 .marquee-container {
-  width: 100%;
-  position: relative; 
-  bottom: 0; 
-  left: 0; 
-  padding: 20px 0;
-  background-color: rgba(0, 0, 0, 0.5); 
+    width: 100%;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    padding: 20px 0;
+    background-color: transparent;
 }
 
 .marquee-image {
-  width: 110%;
-  height: 70px; 
-  background-image: url("/images/track.png"); 
-  background-size: cover;
-  background-position: center;
-  animation: marquee-animation 7s linear infinite;
+    width: 110%;
+    height: 70px;
+    background-image: url("/images/track.png");
+    background-size: cover;
+    background-position: center;
+    animation: marquee-animation 7s linear infinite;
 }
 
-@media (min-width: 1024px) { /* lg screens */
-  .marquee-image {
-    height: 50px;
-  }
-} 
+@media (min-width: 1024px) {
+    /* lg screens */
+    .marquee-image {
+        height: 50px;
+    }
+}
 
-@media (min-width: 1280px) { /* xl screens */
-  .marquee-image {
-    height: 80px;
-  }
+@media (min-width: 1280px) {
+    /* xl screens */
+    .marquee-image {
+        height: 80px;
+    }
 }
 
 /* targeting ipad pros */
 @media (min-width: 1024px) and (height: 1370px) {
-  .responsive-container {
-    /* Add your styles here */
-  height:17vh;
-  }
+    .responsive-container {
+        /* Add your styles here */
+        height: 17vh;
+    }
 }
 /* fixing the ieee compsoc heading on ipad pros*/
 @media (min-width: 1024px) and (height: 1370px) {
-  .responsive-heading {
-    /* Add your styles here */
-  margin-bottom:-17;
-  }
-}
-
-
-
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
-  }
-  .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
-  }
+    .responsive-heading {
+        /* Add your styles here */
+        margin-bottom: -17;
+    }
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
+    :root {
+        --background: 0 0% 100%;
+        --foreground: 0 0% 3.9%;
+        --card: 0 0% 100%;
+        --card-foreground: 0 0% 3.9%;
+        --popover: 0 0% 100%;
+        --popover-foreground: 0 0% 3.9%;
+        --primary: 0 0% 9%;
+        --primary-foreground: 0 0% 98%;
+        --secondary: 0 0% 96.1%;
+        --secondary-foreground: 0 0% 9%;
+        --muted: 0 0% 96.1%;
+        --muted-foreground: 0 0% 45.1%;
+        --accent: 0 0% 96.1%;
+        --accent-foreground: 0 0% 9%;
+        --destructive: 0 84.2% 60.2%;
+        --destructive-foreground: 0 0% 98%;
+        --border: 0 0% 89.8%;
+        --input: 0 0% 89.8%;
+        --ring: 0 0% 3.9%;
+        --chart-1: 12 76% 61%;
+        --chart-2: 173 58% 39%;
+        --chart-3: 197 37% 24%;
+        --chart-4: 43 74% 66%;
+        --chart-5: 27 87% 67%;
+        --radius: 0.5rem;
+    }
+    .dark {
+        --background: 0 0% 3.9%;
+        --foreground: 0 0% 98%;
+        --card: 0 0% 3.9%;
+        --card-foreground: 0 0% 98%;
+        --popover: 0 0% 3.9%;
+        --popover-foreground: 0 0% 98%;
+        --primary: 0 0% 98%;
+        --primary-foreground: 0 0% 9%;
+        --secondary: 0 0% 14.9%;
+        --secondary-foreground: 0 0% 98%;
+        --muted: 0 0% 14.9%;
+        --muted-foreground: 0 0% 63.9%;
+        --accent: 0 0% 14.9%;
+        --accent-foreground: 0 0% 98%;
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 0 0% 98%;
+        --border: 0 0% 14.9%;
+        --input: 0 0% 14.9%;
+        --ring: 0 0% 83.1%;
+        --chart-1: 220 70% 50%;
+        --chart-2: 160 60% 45%;
+        --chart-3: 30 80% 55%;
+        --chart-4: 280 65% 60%;
+        --chart-5: 340 75% 55%;
+    }
+}
+
+@layer base {
+    * {
+        @apply border-border;
+    }
+    body {
+        @apply bg-background text-foreground;
+    }
 }
